[package]
name = "revive-testing"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Test utilities for running RISCV contracts"

[dependencies]
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "at/pallet_revive", features = ["experimental", "runtime"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
]
